--- a/MarsQA-1/MarsQA-1.csproj
+++ b/MarsQA-1/MarsQA-1.csproj
@@ -459,7 +459,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Feature\Profile.feature.cs" />
-    <Compile Include="Feature\ProfileStepDefinitions.cs" />
     <Compile Include="SpecflowPages\Helpers\CommonMethods.cs" />
     <Compile Include="SpecflowPages\Helpers\ConstantHelpers.cs" />
     <Compile Include="SpecflowPages\Helpers\Driver.cs" />
@@ -473,6 +472,9 @@
     <Compile Include="SpecflowPages\Utils\Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecflowPages\Utils\Wait.cs" />
+    <Compile Include="StepDefinitions\ProfileCertificationStepDefinitions.cs" />
+    <Compile Include="StepDefinitions\ProfileEducationStepDefinitions.cs" />
+    <Compile Include="StepDefinitions\ProfileSkillStepDefinitions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -480,6 +482,9 @@
     <None Include="Core\Compression\Snappy\lib\osx\libsnappy64.dylib" />
     <None Include="Core\Compression\Zstandard\lib\linux\libzstd.so" />
     <None Include="Core\Compression\Zstandard\lib\osx\libzstd.dylib" />
+    <None Include="Feature\ProfileCertification.feature" />
+    <None Include="Feature\ProfileEducation.feature" />
+    <None Include="Feature\ProfileSkill.feature" />
     <None Include="Feature\Profile.feature" />
     <None Include="libmongocrypt.dylib" />
     <None Include="libmongocrypt.so" />
