--- a/MarsQA-1/MarsQA-1.csproj
+++ b/MarsQA-1/MarsQA-1.csproj
@@ -471,9 +471,10 @@
     <Compile Include="SpecflowPages\Utils\Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecflowPages\Utils\Wait.cs" />
-    <Compile Include="StepDefinitions\ProfileCertificationStepDefinitions.cs" />
-    <Compile Include="StepDefinitions\ProfileEducationStepDefinitions.cs" />
-    <Compile Include="StepDefinitions\ProfileSkillStepDefinitions.cs" />
+    <Compile Include="StepDefinitions\F03_ProfileCertificationStepDefinitions.cs" />
+    <Compile Include="StepDefinitions\F02_ProfileEducationStepDefinitions.cs" />
+    <Compile Include="StepDefinitions\F01_ProfileSkillStepDefinitions.cs" />
+    <Compile Include="StepDefinitions\Task1_ProfileStepDefinitions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -481,9 +482,9 @@
     <None Include="Core\Compression\Snappy\lib\osx\libsnappy64.dylib" />
     <None Include="Core\Compression\Zstandard\lib\linux\libzstd.so" />
     <None Include="Core\Compression\Zstandard\lib\osx\libzstd.dylib" />
-    <None Include="Feature\ProfileCertification.feature" />
-    <None Include="Feature\ProfileEducation.feature" />
-    <None Include="Feature\ProfileSkill.feature" />
+    <None Include="Feature\F03_ProfileCertification.feature" />
+    <None Include="Feature\F02_ProfileEducation.feature" />
+    <None Include="Feature\F01_ProfileSkill.feature" />
     <None Include="Feature\Profile.feature" />
     <None Include="libmongocrypt.dylib" />
     <None Include="libmongocrypt.so" />
