--- a/MarsQA-1/MarsQA-1.csproj
+++ b/MarsQA-1/MarsQA-1.csproj
@@ -466,15 +466,13 @@
     <Compile Include="SpecflowPages\Helpers\ConstantHelpers.cs" />
     <Compile Include="SpecflowPages\Helpers\Driver.cs" />
     <Compile Include="SpecflowPages\Helpers\ExcelLibHelper.cs" />
-    <Compile Include="SpecflowPages\Pages\HomePage.cs" />
+    <Compile Include="SpecflowPages\Helpers\Wait.cs" />
     <Compile Include="SpecflowPages\Pages\ProfileSkill.cs" />
     <Compile Include="SpecflowPages\Pages\ProfileEducation.cs" />
     <Compile Include="SpecflowPages\Pages\ProfileCertification.cs" />
-    <Compile Include="SpecflowPages\Pages\LogIn.cs" />
-    <Compile Include="SpecflowPages\Utils\CommonDriver.cs" />
+    <Compile Include="SpecflowPages\Pages\SignIn.cs" />
     <Compile Include="SpecflowPages\Utils\Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecflowPages\Utils\Wait.cs" />
     <Compile Include="StepDefinitions\F03_ProfileCertificationStepDefinitions.cs" />
     <Compile Include="StepDefinitions\F02_ProfileEducationStepDefinitions.cs" />
     <Compile Include="StepDefinitions\F01_ProfileSkillStepDefinitions.cs" />
@@ -498,8 +496,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SpecflowTests\Bind_Steps\" />
+    <Folder Include="TestReports\html\" />
     <Folder Include="TestReports\Screenshots\" />
-    <Folder Include="TestReports\Test_files\" />
+    <Folder Include="TestReports\xml\" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.3.3\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
