--- a/MarsQA-1/MarsQA-1.csproj
+++ b/MarsQA-1/MarsQA-1.csproj
@@ -496,9 +496,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SpecflowTests\Bind_Steps\" />
-    <Folder Include="TestReports\html\" />
+    <Folder Include="TestReports\Extentreports\" />
     <Folder Include="TestReports\Screenshots\" />
-    <Folder Include="TestReports\xml\" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.3.3\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
